finish Login Page and add Register page and add routs

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -4,5 +4,8 @@
   "password": "كلمه السر",
   "loginButton": "تسجيل الدخول",
   "SaveLogin": "حفظ معلومات الدخول",
-  "LosePassword": "نسيت كلمة المرور ؟"
+  "LosePassword": "نسيت كلمة المرور ؟",
+  "or": "او",
+  "dontHaveAcc": "ليس لديك حساب ؟",
+  "createAcc": "إنشاء حساب"
 }
