finish Register View and refactor askRow

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,11 +1,14 @@
 {
   "welcomeBack": "أهلاً بعودتك الى تعافي سجل الدخول الأن",
   "email": "البريد الألكتروني",
-  "password": "كلمه السر",
+  "password": "كلمة المرور",
   "loginButton": "تسجيل الدخول",
   "SaveLogin": "حفظ معلومات الدخول",
   "LosePassword": "نسيت كلمة المرور ؟",
   "or": "او",
   "dontHaveAcc": "ليس لديك حساب ؟",
-  "createAcc": "إنشاء حساب"
+  "createAcc": "إنشاء حساب",
+  "username": "أسم المستخدم",
+  "rePassword": "تأكيد كلمة المرور",
+  "HaveAcc": "لديك حساب بالفعل ؟"
 }
