Finish Info UI and refactor custom widgets

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -10,5 +10,33 @@
   "createAcc": "إنشاء حساب",
   "username": "أسم المستخدم",
   "rePassword": "تأكيد كلمة المرور",
-  "HaveAcc": "لديك حساب بالفعل ؟"
+  "HaveAcc": "لديك حساب بالفعل ؟",
+  "personalInfo": "المعلومات الشخصية",
+  "ThirdName": "الأسم الثلاثي",
+  "EnterTheThird": "أدخل أسمك الثلاثي هنا",
+  "Phone": "رقم الهاتف",
+  "EnterPhone": "يرجى إدخال رقم الهاتف",
+  "AlAnbar": "الأنبار",
+  "Erbil": "اربيل",
+  "Babil": "بابل",
+  "Baghdad": "بغداد",
+  "Basra": "بصره",
+  "DhiQar": "ذي قار",
+  "Duhok": "دهوك",
+  "Diyala": "ديالى",
+  "Halabja": "حلبجه",
+  "Karbala": "كربلاء",
+  "Kirkuk": "كركوك",
+  "Muthanna": "المثنى",
+  "Maysan": "ميسان",
+  "Nineveh": "نينوى",
+  "Najaf": "النجف",
+  "Qadisiyah": "القادسيه",
+  "Saladin": "صلاح الدين",
+  "Sulaymaniyah": "السليمانيه",
+  "Wasit": "واسط",
+  "Governorate": "محافظه",
+  "Age": "العمر",
+  "enterAge": "أدخل عمرك هنا",
+  "SaveInfo": "حفظ المعلومات"
 }
