--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,11 +5,38 @@
   "loginButton": "Login",
   "SaveLogin": "Save Login Information",
   "LosePassword": "Forget Password ?",
-  "or":"Or",
-  "dontHaveAcc":"Don't Have An Account ?",
-  "createAcc":"Create Account",
-  "username":"Username",
+  "or": "Or",
+  "dontHaveAcc": "Don't Have An Account ?",
+  "createAcc": "Create Account",
+  "username": "Username",
   "rePassword": "ReWrite Password",
-  "HaveAcc":"Do You Have an Account"
-
+  "HaveAcc": "Do You Have an Account ?",
+  "personalInfo": "Personal Information",
+  "ThirdName": "FullName",
+  "EnterTheThird": "Enter Your FullName here",
+  "Phone": "Phone Number",
+  "EnterPhone": "Please Enter Your Phone Number",
+  "Erbil": "Erbil",
+  "Babil": "Babil",
+  "Baghdad": "Baghdad",
+  "Basra": "Basra",
+  "DhiQar": "DhiQar",
+  "Duhok": "Duhok",
+  "Diyala": "Diyala",
+  "Halabja": "Halabja",
+  "Karbala": "Karbala",
+  "Kirkuk": "Kirkuk",
+  "Muthanna": "Muthanna",
+  "Maysan": "Maysan",
+  "Nineveh": "Ninawa",
+  "Najaf": "Najaf",
+  "Qadisiyah": "Qadisiyah",
+  "Saladin": "Salah Al-Din",
+  "Sulaymaniyah": "Sulaymaniyah",
+  "Wasit": "Wasit",
+  "AlAnbar": "Al-Anbar",
+  "Governorate": "Governorate",
+  "Age": "Age",
+  "enterAge": "Enter Your Age here",
+  "SaveInfo": "Save Information"
 }
