messages View UI done

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -52,5 +52,7 @@
   "CalenderPage": "جدول المواعيد",
   "ProfilePage": "الملف الشخصي",
   "specificsMed": "التخصصات الطبية",
-  "searchSpecfic": "ابحث عن تخصص"
+  "searchSpecfic": "ابحث عن تخصص",
+  "edit": "تعديل",
+  "searchMsg": "ابحث في الرسائل"
 }
